ISIS-2445: doc fixes (after artifact rename)

--- a/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
+++ b/antora/components/comguide/modules/ROOT/pages/post-release-successful.adoc
@@ -220,11 +220,11 @@ md5="$zip.md5"
 fullname="isis-bom"
 pushd bom
 
-curl -O $repo_root/bom/$new_ver/$fullname-$new_ver-$asc
+curl -O $repo_root/$fullname/$new_ver/$fullname-$new_ver-$asc
 svn add $fullname-$new_ver-$asc
-curl -O $repo_root/bom/$new_ver/$fullname-$new_ver-$md5
+curl -O $repo_root/$fullname/$new_ver/$fullname-$new_ver-$md5
 svn add $fullname-$new_ver-$md5
-curl -O $repo_root/bom/$new_ver/$fullname-$new_ver-$zip
+curl -O $repo_root/$fullname/$new_ver/$fullname-$new_ver-$zip
 svn add $fullname-$new_ver-$zip
 
 if [ "Z${old_ver}Z" == "ZZ" ]; then
