ISIS-3000: antora build fix

--- a/mappings/adoc/modules/ROOT/partials/component-nav.adoc
+++ b/mappings/adoc/modules/ROOT/partials/component-nav.adoc
@@ -5,5 +5,5 @@ include::mappings:ROOT:partial$module-nav.adoc[]
 //include::outbox-publisher:partial$module-nav.adoc[]
 include::mappings:jaxrsclient:partial$module-nav.adoc[]
 //include::mappings:minio:partial$module-nav.adoc[]
-include::mappings:restclient:partial$module-nav.adoc[]
+//include::mappings:restclient:partial$module-nav.adoc[]
 //include::mappings:slack:partial$module-nav.adoc[]
