ISIS-3001: further minor cleanup

--- a/antora/components/userguide/modules/ROOT/partials/extensions.adoc
+++ b/antora/components/userguide/modules/ROOT/partials/extensions.adoc
@@ -1,3 +1,4 @@
+include::userguide:excel:partial$module-nav.adoc[]
 include::userguide:command-log:partial$module-nav.adoc[]
 include::userguide:command-replay:partial$module-nav.adoc[]
 include::userguide:flyway:partial$module-nav.adoc[]
