--- a/antora/components/userguide/modules/fun/pages/modules.adoc
+++ b/antora/components/userguide/modules/fun/pages/modules.adoc
@@ -15,29 +15,29 @@ By convention, we have one Spring "logical" module in each Maven "physical" modu
 Thus, there will be a single top-level package corresponding to the module, and this will be aligned with the `<groupId>` and `<artifactId>` of the Maven module in which it resides.
 
 The framework's own modules follow this convention.
-For example, the xref:subdomains:excel:about.adoc[Excel subdomain] module has several submodules, one of which is its applib.
+For example, the xref:extensions:excel:about.adoc[Excel extension] module has several submodules, one of which is its applib.
 This:
 
 * has a Maven
-** groupId = `org.apache.isis.subdomains`
-** artifactId = `isis-subdomains-excel-applib`
+** groupId = `org.apache.isis.extensions`
+** artifactId = `isis-extensions-excel-applib`
 
-* in the applib, has a top-level package of `org.apache.isis.subdomains.excel.applib`
+* in the applib, has a top-level package of `org.apache.isis.extensions.excel.applib`
 
-* defines a Spring configuration module called `IsisModuleSubdomainsExcelApplib`, that is simply:
+* defines a Spring configuration module called `IsisModuleExtExcelApplib`, that is simply:
 +
 [source,java]
 ----
 @Configuration
 @ComponentScan                                  // <.>
-public class IsisModuleSubdomainsExcelApplib {
+public class IsisModuleExtExcelApplib {
 }
 ----
 <.> the link:https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/context/annotation/ComponentScan.html[@ComponentScan] indicates that the classpath should be scanned for domain services, entities and xref:testing:fixtures:about.adoc[fixture scripts].
 
 When there is a dependency, this is expressed in two ways: first, as a "physical" `<dependency` in Maven; and second, as a "logical" dependency using link:https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/context/annotation/Import.html[@Import] in the `@Configuration` module.
 
-We can see this for example in the `testing` module of the Excel library (artifactId of `isis-submodules-excel-testing`), where:
+We can see this for example in the `testing` module of the Excel library (artifactId of `isis-extensions-excel-testing`), where:
 
 
 
@@ -61,21 +61,21 @@ Therefore:
 [source,xml]
 ----
 <dependency>
-    <groupId>org.apache.isis.subdomains</groupId>
-    <artifactId>isis-subdomains-excel-applib</artifactId>
+    <groupId>org.apache.isis.extensions</groupId>
+    <artifactId>isis-extensions-excel-applib</artifactId>
 </dependency>
 ----
 
-* and in the testing module's `IsisModuleSubdomainsExcelTesting` we see:
+* and in the testing module's `IsisModuleExtExcelTesting` we see:
 +
 [source,java]
 ----
 @Configuration
 @Import({                                           // <.>
-    IsisModuleSubdomainsExcelApplib.class
+    IsisModuleExtExcelApplib.class
 })
 @ComponentScan
-public class IsisModuleSubdomainsExcelTesting {
+public class IsisModuleExtExcelTesting {
 }
 ----
 <.> The link:https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/context/annotation/Import.html[@Import] annotation declares the dependency.
@@ -92,7 +92,7 @@ package com.mycompany.modules.customer;
 
 @Configuration                                  // <.>
 @Import({
-    IsisModuleSubdomainsExcelApplib.class       // <.>
+    IsisModuleExtExcelApplib.class       // <.>
 })
 @ComponentScan                                  // <.>
 public class CustomerModule {}
@@ -112,7 +112,7 @@ import org.apache.isis.applib.annotation.Module;
 
 @Module
 @Import({
-    IsisModuleSubdomainsExcelApplib.class
+    IsisModuleExtExcelApplib.class
 })
 public class CustomerModule {}
 ----
