--- a/README.adoc
+++ b/README.adoc
@@ -15,9 +15,56 @@ Start learning about Apache Isis using the https://github.com/apache/isis-app-he
 Explore features with our daily built demo docker image https://github.com/apache/isis/blob/master/examples/demo/domain/src/main/adoc/modules/demo/pages/about.adoc["DemoApp"].
 Build your own apps using our https://github.com/apache/isis-app-simpleapp["SimpleApp"] starter app.
 
-For help and support, join our https://cwiki.apache.org/confluence/display/ISIS/Signing+up+to+Slack[Slack channel] or http://isis.apache.org/support.html[mailing list].
+For help and support, join our https://isis.apache.org/docs/2.0.0-M7/support/slack-channel.html[Slack channel] or https://isis.apache.org/docs/2.0.0-M7/support/mailing-list.html[mailing list].
 
 toc::[]
+
+== Nightly Builds
+
+Nightly builds are available as link:https://github.com/orgs/apache/packages?repo_name=isis[packages] of this repo.
+
+One way to make them available is to add the following to your `~/.m2/settings.xml` file.
+You will need to add a github token in the location indicated:
+
+[source,xml]
+.~/.m2/settings.xml
+----
+<settings>
+  <servers>
+    <server>
+      <id>github-apache-isis</id>
+      <username>myusername</username>                               <!--.-->
+      <password>ghp_TOKEN_WITH_PACKAGE_REPO_READ_ACCESS</password>  <!--.-->
+    </server>
+  </servers>
+  <profiles>
+    <profile>
+      <id>github-apache-isis</id>
+      <activation>
+        <property>
+          <name>!skip.github-apache-isis</name>
+        </property>
+      </activation>
+      <repositories>
+        <repository>
+          <id>github-apache-isis</id>
+          <url>https://maven.pkg.github.com/apache/isis</url>
+          <snapshots>
+            <enabled>true</enabled>
+          </snapshots>
+        </repository>
+      </repositories>
+    </profile>
+  </profiles>
+  <activeProfiles>
+    <activeProfile>github-apache-isis</activeProfile>
+  </activeProfiles>
+</settings>
+----
+<.> your github username.
+<.> a corresponding personal token to provide access, as per link:https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-apache-maven-registry#authenticating-to-github-packages[these docs].
+
+You can find the latest version by browsing the link:https://github.com/apache/isis/packages/1304938[org.apache.isis.core.isis-applib] package.
 
 == Core Features
 
