--- a/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
@@ -109,8 +109,6 @@ import org.apache.isis.viewer.restfulobjects.client.RestfulClientConfig;
 <T> Try<Can<T>> digestList(Response response, Class<T> entityType, GenericType<List<T>> genericType);
 ----
 
-
-
 === Mappings
 
 [source, xml]
@@ -122,5 +120,27 @@ import org.apache.isis.viewer.restfulobjects.client.RestfulClientConfig;
 -->
 ----
 
+=== Mavendeps
+
+[source, xml]
+.integtests
+----
+<!-- removed
+<groupId>org.apache.isis.mavendeps</groupId>
+<artifactId>isis-mavendeps-integtests</artifactId>
+<type>pom</type>
+-->
+
+<!-- instead use directly as required ... -->
+
+<groupId>org.apache.isis.testing</groupId>
+<artifactId>isis-testing-integtestsupport-applib</artifactId>
+
+<groupId>org.apache.isis.testing</groupId>
+<artifactId>isis-testing-fakedata-applib</artifactId>
+
+<groupId>org.apache.isis.testing</groupId>
+<artifactId>isis-testing-fixtures-applib</artifactId>
+----
 
 
