ISIS-2902: split factory method Identifier.propertyOrCollectionIdentifier(..) into Identifier.propertyIdentifier(..) and Identifier.collectionIdentifier(..)

--- a/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
+++ b/antora/components/relnotes/modules/ROOT/pages/2022/2.0.0-RC1/mignotes.adoc
@@ -40,6 +40,9 @@ public class SeedService implements MetamodelListener {
 }
 ---- 
 
+| Factory method `Identifier.propertyOrCollectionIdentifier(..)`
+| was slit up into `Identifier.propertyIdentifier(..)` and `Identifier.collectionIdentifier(..)`
+
 |===
 
 == Commons
