--- a/testing/fixtures/adoc/modules/fixtures/pages/fixture-scripts/api-and-usage.adoc
+++ b/testing/fixtures/adoc/modules/fixtures/pages/fixture-scripts/api-and-usage.adoc
@@ -201,153 +201,131 @@ At the same time, "Persona" instances of entity classes help the developer becom
 For example, "Steve Single" the Customer might be 21, single and no kids, whereas vs "Meghan Married-Mum" the Customer might be married 35 with 2 kids.
 Using "Steve" vs "Meghan" immediately informs the developer about the particular scenario being explored.
 
-The xref:refguide:testing:index/fixtures/applib/personas/PersonaWithBuilderScript.adoc[PersonaWithBuilderScript] and
-xref:refguide:testing:index/fixtures/applib/personas/PersonaWithFinder.adoc[PersonaWithFinder]
- interfaces are intended to be implemented typically by "persona" enums, where each enum instance captures the essential data of some persona.
+The xref:refguide:testing:index/fixtures/applib/personas/Persona.adoc[Persona] interfaces is intended to be implemented typically by "persona" enums, where each enum instance captures the essential data of some persona.
+xref:refguide:testing:index/fixtures/applib/personas/Persona.adoc[Persona] in turn unifies two lower-level interfaces, xref:refguide:testing:index/fixtures/applib/personas/PersonaWithBuilderScript.adoc[PersonaWithBuilderScript] and
+xref:refguide:testing:index/fixtures/applib/personas/PersonaWithFinder.adoc[PersonaWithFinder].
+
 So, going back to the previous example, we might have:
 
 [source,xml]
+.Customer_persona.java
 ----
+@Getter
+@RequiredArgsConstructor
 public enum Customer_persona
-        implements PersonaWithBuilderScript<..>, PersonaWithFinder<..> {
+        implements Persona<Customer, CustomerBuilderScript> {
 
-    SteveSingle("Steve", "Single", 21, MaritalStatus.SINGLE, 0)
-    MeghanMarriedMum("Meghan", "Married-Mum", 35, MaritalStatus.MARRIED, 2);
-    ...
-}
-----
+    SteveSingle(1, "Steve", "Single", 21),
+    MeghanMarriedMum(2, "Meghan", "Married-Mum", 35);
 
-The xref:refguide:testing:index/fixtures/applib/personas/PersonaWithBuilderScript.adoc[PersonaWithBuilderScript] interface means that this enum is able to act as a factory for a xref:refguide:testing:index/fixtures/applib/personas/BuilderScriptAbstract.adoc[BuilderScriptAbstract].
-This is a specialization of `FixtureScript` that is used to actually create the entity (customer, or whatever), using the data taken out of the enum instance:
-
-[source,xml]
-----
-public interface PersonaWithBuilderScript<T, F extends BuilderScriptAbstract<T,F>>  {
-    F builder();
-}
-----
-
-The xref:refguide:testing:index/fixtures/applib/personas/PersonaWithFinder.adoc[PersonaWithFinder] interface meanwhile indicates that the enum can "lookup" its corresponding entity from the appropriate repository domain service:
-
-[source,xml]
-----
-public interface PersonaWithFinder<T> {
-    T findUsing(final ServiceRegistry2 serviceRegistry);
-
-}
-----
-
-The xref:docs:starters:simpleapp.adoc[SimpleApp] starter app provides a sample implementation of these interfaces:
-
-[source,java]
-----
-@lombok.AllArgsConstructor
-public enum SimpleObject_persona
-        implements PersonaWithBuilderScript<SimpleObject, SimpleObjectBuilder>,
-                   PersonaWithFinder<SimpleObject> {
-    FOO("Foo"),
-    BAR("Bar"),
-    BAZ("Baz"),
-    FRODO("Frodo"),
-    FROYO("Froyo"),
-    FIZZ("Fizz"),
-    BIP("Bip"),
-    BOP("Bop"),
-    BANG("Bang"),
-    BOO("Boo");
-
-    private final String name;
+    private final int id;
+    private final String firstName;
+    private final String lastName;
+    private final int age;
 
     @Override
-    public SimpleObjectBuilder builder() {
-        return new SimpleObjectBuilder().setName(name);
+    public CustomerBuilderScript builder() {                            // <.>
+        return new CustomerBuilderScript(this);                         // <.>
     }
 
     @Override
-    public SimpleObject findUsing(final ServiceRegistry2 serviceRegistry) {
-        SimpleObjectRepository simpleObjectRepository =
-            serviceRegistry.lookupService(SimpleObjectRepository.class);
-        return simpleObjectRepository.findByNameExact(name);
+    public Customer findUsing(ServiceRegistry serviceRegistry) {        // <.>
+        return serviceRegistry.lookupServiceElseFail(CustomerRepository.class).findById(id).orElseThrow();
     }
+
 }
 ----
+<.> from xref:refguide:testing:index/fixtures/applib/personas/PersonaWithBuilderScript.adoc[PersonaWithBuilderScript]
+<.> it's idiomatic to just pass self to the build script.
+<.> from xref:refguide:testing:index/fixtures/applib/personas/PersonaWithFinder.adoc[PersonaWithFinder]
 
-where `SimpleObjectBuilder` in turn is:
+Here the `CustomerBuilderScript` is a subclass of xref:refguide:testing:index/fixtures/applib/personas/BuilderScriptAbstract.adoc[BuilderScriptAbstract],  a specialized fixture script that acts as a factory of the domain object (`Customer`, in this case), usig the data taken out of the enum instance.
+In many cases a builder script will create a single top-level object, so the related xref:refguide:testing:index/fixtures/applib/personas/BuilderScriptWithResult.adoc[BuilderScriptWithResult] removes some boilerplate:
 
 [source,java]
+.CustomerBuilderScript.java
 ----
-import javax.inject.Inject;
-import lombok.Accessors;
-import lombok.Getter;
-import lombok.Setter;
+@RequiredArgsConstructor
+public class CustomerBuilderScript extends BuilderScriptWithResult<Customer> {
 
-@Accessors(chain = true)
-public class SimpleObjectBuilder
-            extends BuilderScriptAbstract<SimpleObject, SimpleObjectBuilder> {
-
-    @Getter @Setter
-    private String name;                                    // <1>
+    private final Customer_persona persona;
 
     @Override
-    protected void execute(final ExecutionContext ec) {
-        checkParam("name", ec, String.class);               // <2>
-        object = wrap(simpleObjects).create(name);
+    protected Customer buildResult(ExecutionContext ec) {
+        return customerRepository.create(persona.getFirstName(), persona.getLastName(), persona.getAge());
     }
 
-    @Getter
-    private SimpleObject object;                            // <3>
-
-    @Inject
-    SimpleObjects simpleObjects;
+    @Inject CustomerRepository customerRepository;
 }
 ----
-<1> The persona class should set this value (copied from its own state)
-<2> the inherited "checkParam" is used to ensure that a value is set
-<3> the created entity is provided as an output
-
-
-== Using within Tests
-
-Fixture scripts can be called from integration tests just the same way that fixture scripts can call one another.
-
-For example, here's part of an integration test from the xref:docs:starters:simpleapp.adoc[SimpleApp] starter app:
-
-[source,java]
-.SimpleObject_IntegTest.java
-----
-@Transactional
-public class SimpleObject_IntegTest extends SimpleModuleIntegTestAbstract {
-
-    SimpleObject simpleObject;
-
-    @BeforeEach
-    void setUp() {
-        // given
-        simpleObject = fixtureScripts.runPersona(SimpleObject_persona.FOO); // <.>
-    }
-
-    public static class updateName extends SimpleObject_IntegTest {
-
-        @Test
-        void can_be_updated_directly() {
-
-            // when
-            wrap(simpleObject).updateName("new name");
-            transactionService.flushTransaction();
-
-            // then
-            assertThat(wrap(simpleObject).getName()).isEqualTo("new name");
-        }
-
-        // ...
-    }
-}
-----
-<.> runs a persona fixture script and stores the resultant domain object for testing.
 
 Put together, the persona enums provide the "what" - hard-coded values for certain key data that the developer becomes very familiar with - while the builder provides the "how-to".
 
-These builder scripts (xref:refguide:testing:index/fixtures/applib/personas/BuilderScriptAbstract.adoc[BuilderScriptAbstract] implementations) can be used independently of the enum personas.
+
+=== Using within a Scenario Fixture Script
+
+With these definitions in place, the payback is that within the context of a parent fixture script, a new domain object can be easily built and retrieved later:
+
+[source,java]
+.ScenarioFixtureScript.java
+----
+public class ScenarioFixtureScript extends FixtureScript {
+
+    @Override
+    protected void execute(ExecutionContext executionContext) {
+
+        // build it ..
+        Customer steve = Customer_persona.SteveSingle.build(this, executionContext);
+
+        // ... look it up
+        Customer steve2 = Customer_persona.SteveSingle.findUsing(serviceRegistry);
+    }
+}
+----
+
+It's also possible to use personas (or indeed any fixture scripts) from integration tests.
+This is discussed in the next section.
+
+
+
+=== Using within Tests
+
+Fixture scripts can be called from integration tests just the same way that fixture scripts can call one another.
+
+Using the example persona from the previous section, we can use the xref:refguide:testing:index/fixtures/applib/fixturescripts/FixtureScripts.adoc[FixtureScripts] domain service to build the fixture.
+
+[source,java]
+.Customer_IntegTest.java
+----
+public class Customer_IntegTest {
+
+    @Inject FixtureScripts fixtureScripts;
+    @Inject ServiceRegistry serviceRegistry;
+
+    @BeforeEach
+    public void setup() {
+
+        // build ...
+        Customer steve = fixtureScripts.runPersona(Customer_persona.SteveSingle);       // <.>
+
+    }
+
+    @Test
+    public void update_customer() {
+
+        // ... look it up
+        Customer steve = Customer_persona.SteveSingle.findUsing(serviceRegistry);   // <.>
+    }
+}
+----
+<.> runs a persona fixture script
+<.> looks up the domain object.
+An alternative design would be to simply store the domain object as a field.
+
+
+=== More sophisticated use cases
+
+Although its idiomatic for builder scripts (xref:refguide:testing:index/fixtures/applib/personas/BuilderScriptAbstract.adoc[BuilderScriptAbstract] implementations) and persona enums to come in pairs, there's no requirement to do so; builder scripts  can be used independently of the enum personas.
 And for more complex entity -where there might be many potential values that need to be provided
 - the builder script can automatically default some or even all of these values.
 
