ISIS-2965: updates docs for SudoService

--- a/antora/components/refguide-index/modules/applib/pages/index/services/sudo/hooks/SudoService_020-examples-and-usage.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/sudo/hooks/SudoService_020-examples-and-usage.adoc
@@ -35,7 +35,7 @@ For example:
 ----
 protected void execute(final ExecutionContext ec) {
     ...
-    sudoService.sudo(InteractionContext.switchUser(
+    sudoService.call(InteractionContext.switchUser(
             UserMemento.ofNameAndRoles("seed-user", SudoService.ACCESS_ALL_ROLE),
             () -> { /* ... */ }
     );
