--- a/mavendeps/adoc/modules/mavendeps/pages/about.adoc
+++ b/mavendeps/adoc/modules/mavendeps/pages/about.adoc
@@ -1,17 +1,9 @@
-= Aggregator POMs
+= Webapp Aggregator POM
 
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-The framework provides a number of "aggregator" POMs that act as a convenient way to aggregate together various common dependencies.
-
-For example, when writing unit tests for your domain app, it can simply depend on the `isis-mavendeps-unittests` artifact (rather than have to reference all of JUnit, AssertJ, Spring Boot, Hamcrest, Mockito and so on).
-
-Currently five aggregator POMs are provided.
-
-== Webapp
-
 The `isis-mavendeps-webapp` aggregates the main runtime dependencies of a production webapp.
-Note however that it does _not_ include the runtime dependencies for either JDO or JPA; these have their own "mavendeps" POM, discussed xref:#jdo-and-jpa[below].
+Note that it does _not_ include the runtime dependencies for either JDO or JPA; these must be included separately.
 
 To use, add the following :
 
@@ -33,133 +25,20 @@ For convenience, it includes all of the current components available:
 
 * Apache Isis Core - the xref:refguide:ROOT:about.adoc[Applib] and underlying implementation (xref:core:runtime-services:about.adoc[Runtime Services])
 
-* Two of the security implementations (xref:security:bypass:about.adoc[Bypass] and  xref:security:keycloak:about.adoc[Keycloak])
+* The xref:security:bypass:about.adoc[Bypass] security implementation.
 +
-The xref:security:shiro:about.adoc[Shiro] and xref:security:spring:about.adoc[Spring] implementations are omitted, as each of these have additional third-party dependencies.
+Other security implementations (xref:security:shiro:about.adoc[Shiro],  xref:security:spring:about.adoc[Spring] and and  xref:security:keycloak:about.adoc[Keycloak]) are omitted, as each of these have additional third-party dependencies.
 
-* All the viewer implementations (xref:vw:ROOT:about.adoc[Wicket], xref:vro:ROOT:about.adoc[Restful Objects])
+* The viewer implementations (xref:vw:ROOT:about.adoc[Wicket], xref:vro:ROOT:about.adoc[Restful Objects])
 
-// doesn't seem to include these...
-//* All the persistence implementations (xref:pjdo:ROOT:about.adoc[JDO/DataNucleus], xref:pjpa:ROOT:about.adoc[JPA/EclipseLink])
+If you don't need any of these, then use a Maven `<exclusion>`.
 
-If you don't need any of these (for example, you'll probably only want one security implementation), then you can exclude the others.
+In addition, you will probably need to specify a persistence implementation (xref:pjpa:ROOT:about.adoc[JPA/Eclipselink] or xref:pjdo:ROOT:about.adoc[JDO/DataNucleus]) as well as a security implementation.
 
 Also, remember that adding the class onto the classpath does _not_ make that functionality available (Apache Isis does not currently leverage Spring Boot's link:https://docs.spring.io/spring-boot/docs/current/reference/html/using-spring-boot.html#using-boot-auto-configuration[auto configuration] capabilities).
-So, you must also add in the appropriate `IsisModuleXxx` to your application's top-level link:https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/context/annotation/Configuration.html[@Configuration] (aka "app manifest").
+You must therefore also add in the appropriate `IsisModuleXxx` to your application's top-level link:https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/context/annotation/Configuration.html[@Configuration] (aka "app manifest").
 For example, see the xref:docs:starters:simpleapp.adoc#appmanifest[AppManifest for the SimpleApp] starter app.
 
-
-== Testing
-
-Three aggregator POMs are provided to support  xref:testing:unittestsupport:about.adoc[unit testing], xref:testing:integtestsupport:about.adoc[integ testing] or running xref:testing:specsupport:about.adoc[BDD (Cucumber) specs].
-
-To use them when unit testing, add:
-
-[source,xml]
-.pom.xml
-----
-<dependencies>
-    <dependency>
-        <groupId>org.apache.isis.mavendeps</groupId>
-        <artifactId>isis-mavendeps-unittests</artifactId>
-        <type>pom</type>
-        <scope>test</scope>
-    </dependency>
-</dependencies>
-----
-
-For integration testing, add:
-
-[source,xml]
-.pom.xml
-----
-<dependencies>
-    <dependency>
-        <groupId>org.apache.isis.mavendeps</groupId>
-        <artifactId>isis-mavendeps-integtests</artifactId>
-        <type>pom</type>
-        <scope>test</scope>
-    </dependency>
-</dependencies>
-----
-
-
-The table below summarises the dependencies that each of these aggregator POMs brings in.
-
-.Dependencies of the Aggregator POM for Tests
-[cols="3a,^1a,^1a", options="header"]
-|===
-
-| Dependency
-| mavendeps-
-unittests
-| mavendeps-
-integtests
-
-
-|Apache Isis +
-xref:testing:unittestsupport:about.adoc[unit test support] +
-| Y |
-
-|Apache Isis +
-xref:testing:integtestsupport:about.adoc[integ test support] +
-|   | Y
-
-
-| Apache Isis +
-xref:refguide:ROOT:about.adoc[Applib]
-| Y | Y
-
-| Apache Isis +
-xref:security:bypass:about.adoc[Bypass] security
-|   | Y
-
-| Apache Isis +
-xref:testing:fakedata:about.adoc[Fake Data]
-| Y | Y
-
-|Apache Isis +
-xref:testing:fixtures:about.adoc[Fixture Scripts]
-|   | Y
-
-| link:https://junit.org/junit5/docs/current/user-guide/[JUnit 5 "jupiter"]
-| Y | Y
-
-| link:https://junit.org/junit5/docs/current/user-guide/#migrating-from-junit4[JUnit 5 "vintage"]
-| Y |
-
-| link:https://docs.spring.io/spring-boot/docs/current/reference/html/spring-boot-features.html#boot-features-testing[Spring Boot Test]
-| Y | Y
-
-| link:http://hamcrest.org/JavaHamcrest/[Hamcrest] (core + library)
-| Y | Y
-
-| link:https://joel-costigliola.github.io/assertj/[AssertJ]
-| Y | Y
-
-| link:https://site.mockito.org/[Mockito]
-| Y | Y
-
-| link:http://jmock.org/[JMock]
-| Y |
-
-| link:https://github.com/approvals/ApprovalTests.Java[Approval tests]
-| Y | Y
-
-| link:http://picocontainer.com/[PicoContainer] +
-(for JMock2 extensions)
-| Y |
-
-| link:https://github.com/google/guava/wiki[Google's Guava]
-| Y |
-
-| link:http://hsqldb.org[HSQLDB]
-|   | Y
-
-| link:https://www.h2database.com[H2 Database]
-|   | Y
-
-|===
 
 
 
