ISIS-2651: adds support for datanucleus.schema.generate-database.mode
and additional docs for JDO/JPA

--- a/persistence/jdo/adoc/modules/ROOT/pages/db-schemas.adoc
+++ b/persistence/jdo/adoc/modules/ROOT/pages/db-schemas.adoc
@@ -13,8 +13,11 @@ For example, xref:security:secman:about.adoc[SecMan]' JDO implementation resides
 Its `ApplicationUser` entity is defined as:
 
 [source,java]
+.ApplicationUser.java
 ----
-@javax.jdo.annotations.PersistenceCapable(
+import javax.jdo.annotations.PersistenceCapable;
+
+@PersistenceCapable(
         schema = "isisExtensionsSecman",
         table = "ApplicationUser",
         ...
