--- a/viewers/restfulobjects/adoc/modules/ROOT/pages/hints-and-tips/troubleshooting.adoc
+++ b/viewers/restfulobjects/adoc/modules/ROOT/pages/hints-and-tips/troubleshooting.adoc
@@ -52,7 +52,8 @@ Add `@XmlAccessorType(XmlAccessType.FIELD)` to your domain entity:
 @javax.jdo.annotations.PersistenceCapable(identityType = IdentityType.DATASTORE)
 @javax.jdo.annotations.DatastoreIdentity(strategy = javax.jdo.annotations.IdGeneratorStrategy.NATIVE, column = "id")
 @javax.jdo.annotations.Version(strategy = VersionStrategy.VERSION_NUMBER, column = "version")
-@DomainObject(logicalTypeName = "ServiceName", bounded = true)
+@Named("xxx.ServiceName")
+@DomainObject(bounded = true)
 @DomainObjectLayout(cssClassFa = "tag", describedAs = "")
 @XmlAccessorType(XmlAccessType.FIELD)
 @SuppressWarnings("javadoc")
