--- a/api/schema/src/main/adoc/modules/schema/pages/cmd.adoc
+++ b/api/schema/src/main/adoc/modules/schema/pages/cmd.adoc
@@ -125,7 +125,7 @@ The `actionDto` and `propertyDto` are the concrete subtypes:
 <.> the `memberDto` is an abstract type.
 I.s primary responsibility is simply to identify the member (action or property).
 <.> the formal identifier (fully qualified class name + member name) of the member being interacted with (action or property).
-<.> the "logical" formal identifier (object type, as per `@DomainObject(logicalTypeName=)`, + member name) of the member being interacted with (action or property).
+<.> the "logical" formal identifier (object type, as per `@Named(member name) of the member being interacted with (action or property).
 <.> the `interactionType` attribute indicates whether the member is an action or a property.
 <.> the `actionDto` complex type captures the set of parameters (also including the argument values) with which to invoke the action.
 T.e `paramsDto` type is defined xref:refguide:schema:cmd/ancillary.adoc[below].
